<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog"
        android:background="@drawable/dialog_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            app:lottie_rawRes="@raw/logout4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.6"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:id="@+id/error_text"
            app:layout_constraintTop_toBottomOf="@id/animationView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/log_out_text"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal"
            android:textColor="@color/textColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_btn"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/error_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/yes"
            app:layout_constraintHorizontal_bias="0.98"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:background="@drawable/button_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/error_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ok_btn"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/no"
            app:layout_constraintHorizontal_bias="0.98"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:background="@drawable/button_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>