<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <androidx.constraintlayout.widget.ConstraintLayout
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:background="@drawable/dialog_back"
       android:layout_width="@dimen/_260sdp"
       android:layout_height="@dimen/_130sdp">
      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/cons_camera"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintHorizontal_bias="0.18"
          app:layout_constraintVertical_bias="0.4"
          android:layout_width="@dimen/_80sdp"
          android:layout_height="@dimen/_70sdp">
         <ImageView
             android:id="@+id/camera"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintVertical_bias="0.3"
             app:layout_constraintHorizontal_bias="0.5"
             android:src="@drawable/ic_baseline_camera_alt_24"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"/>
         <TextView
             app:layout_constraintTop_toBottomOf="@id/camera"
             app:layout_constraintLeft_toLeftOf="@id/camera"
             app:layout_constraintRight_toRightOf="@id/camera"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.2"
             android:textColor="@color/textColor"
             android:textStyle="normal"
             android:textSize="@dimen/_12sdp"
             android:text="@string/camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
      </androidx.constraintlayout.widget.ConstraintLayout>
      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/cons_gallery"
          app:layout_constraintTop_toTopOf="@id/cons_camera"
          app:layout_constraintBottom_toBottomOf="@id/cons_camera"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintHorizontal_bias="0.82"
          app:layout_constraintVertical_bias="0.5"
          android:layout_width="@dimen/_80sdp"
          android:layout_height="@dimen/_70sdp">
         <ImageView
             android:id="@+id/gallery"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintVertical_bias="0.3"
             app:layout_constraintHorizontal_bias="0.5"
             android:src="@drawable/ic_baseline_image_24"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"/>
         <TextView
             app:layout_constraintTop_toBottomOf="@id/gallery"
             app:layout_constraintLeft_toLeftOf="@id/gallery"
             app:layout_constraintRight_toRightOf="@id/gallery"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.2"
             android:textColor="@color/textColor"
             android:textStyle="normal"
             android:textSize="@dimen/_12sdp"
             android:text="@string/gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
      </androidx.constraintlayout.widget.ConstraintLayout>
      <TextView
          android:id="@+id/close"
          android:padding="@dimen/_5sdp"
          app:layout_constraintHorizontal_bias="0.95"
          android:textSize="@dimen/_13sdp"
          android:text="@string/cancel"
          android:textColor="@color/textColor"
          app:layout_constraintTop_toBottomOf="@id/cons_gallery"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>