<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/cons_app"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainView.view.settings.SettingsFragment">
    <TextView
        android:id="@+id/text_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.06"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/textColor"
        android:text="@string/settings"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/them"
        android:elevation="@dimen/_2sdp"
        android:layout_width="0dp"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@id/text_settings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintWidth_percent="0.95">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/image_tema"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:lottie_rawRes="@raw/lottie_mode"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_mode"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/image_tema"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toRightOf="@id/image_tema"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_tema" />
            <com.suke.widget.SwitchButton
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/text"
                app:layout_constraintTop_toTopOf="@id/text"
                app:sb_checked_color="@color/background_switch"
                app:layout_constraintHorizontal_bias="0.97"
                android:id="@+id/switch_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language"
        android:layout_width="0dp"
        android:elevation="@dimen/_2sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/them"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintWidth_percent="0.95">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/tongue"
                app:lottie_rawRes="@raw/language"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tongue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_language"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/tongue"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toRightOf="@id/tongue"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tongue" />

            <TextView
                android:id="@+id/tongue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Русский"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/tongue"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintLeft_toRightOf="@id/tongue1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tongue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:elevation="@dimen/_2sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/language"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:layout_constraintWidth_percent="0.95">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/icon_account"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/log_out"
                app:lottie_loop="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_13sdp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/icon_account"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toRightOf="@id/icon_account"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/icon_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/style"-->
<!--        android:layout_width="0dp"-->
<!--        android:elevation="@dimen/_2sdp"-->
<!--        android:layout_height="@dimen/_45sdp"-->
<!--        android:background="@drawable/settings"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:cardCornerRadius="@dimen/_5sdp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/logout"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.049"-->
<!--        app:layout_constraintWidth_percent="0.95">-->
<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:id="@+id/icon_style"-->
<!--            android:layout_width="@dimen/_25sdp"-->
<!--            android:layout_height="@dimen/_25sdp"-->
<!--            app:lottie_autoPlay="true"-->
<!--            app:lottie_rawRes="@raw/log_out"-->
<!--            app:lottie_loop="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.03"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <TextView-->
<!--            android:id="@+id/text_style"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/log_out"-->
<!--            android:textColor="@color/textColor"-->
<!--            android:textSize="@dimen/_13sdp"-->
<!--            android:textStyle="normal"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/icon_style"-->
<!--            app:layout_constraintHorizontal_bias="0.05"-->
<!--            app:layout_constraintLeft_toRightOf="@id/icon_style"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/icon_style" />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->




</androidx.constraintlayout.widget.ConstraintLayout>